All Queries Working

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,13 +1,5 @@
 
-div.rotate {
-  width: 50px;
-  height: 50px;
-  background-color: chocolate;
-}
-.rotate:hover {
-  transform: rotate(35deg); 
-  background-color: deeppink;
-}
+
 
 .spinner{
   font-size: 140px;
@@ -19,11 +11,89 @@ div.rotate {
   /*position: relative;*/
   /*content: '◌';*/
 }
-/*
+@keyframes rotation_anim {
+  0%{
+    transform: rotatez(0deg);
+  }
+	100% {
+		/*transform: rotatey(360deg);*/
+    /*transform: rotatex(360deg);*/
+    transform: rotatez(360deg);
+	}
+}
+/*https://codepen.io/yochans/pen/RwoRdBe*/
+
+
+
+
+#chart {
+    border: 1px solid black;
+}
+
+
+/*Scrapped Code: 
+
+The below code was used to help gain an understanding of Java script, CSS, and HTML.
+div.rotate {
+  width: 50px;
+  height: 50px;
+  background-color: chocolate;
+}
+.rotate:hover {
+  transform: rotate(35deg); 
+  background-color: deeppink;
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 3px dotted rgb(0, 0, 0);
+  border-style: solid solid dotted dotted;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
+}
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px dotted #FF3D00;
+  border-style: solid solid dotted;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  animation: rotationBack 1s linear infinite;
+  transform-origin: center center;
+}
+  
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+} 
+https://cssloaders.github.io
+
 .spinner:hover {
   animation: rotation_anim 1s linear infinite;
 }
-*/
+
 
 .container{
   
@@ -55,70 +125,27 @@ div.rotate {
 	animation: rotation_anim 1s linear infinite;
   transform-origin: 0 0;
 }
-
-@keyframes rotation_anim {
-  0%{
-    transform: rotatez(0deg);
-  }
-	100% {
-		/*transform: rotatey(360deg);*/
-    /*transform: rotatex(360deg);*/
-    transform: rotatez(360deg);
-	}
+div.rotate {
+  width: 50px;
+  height: 50px;
+  background-color: chocolate;
 }
-/*https://codepen.io/yochans/pen/RwoRdBe*/
-
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 3px dotted rgb(0, 0, 0);
-  border-style: solid solid dotted dotted;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  animation: rotation 2s linear infinite;
-}
-.loader::after {
-  content: '';  
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  border: 3px dotted #FF3D00;
-  border-style: solid solid dotted;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  animation: rotationBack 1s linear infinite;
-  transform-origin: center center;
-}
-    
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} 
-@keyframes rotationBack {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
-} 
-/*https://cssloaders.github.io*/
-
-
-#chart {
-    border: 1px solid black;
+.rotate:hover {
+  transform: rotate(35deg); 
+  background-color: deeppink;
 }
 
+Scrapped HTML 
+<div class = "rotate"> </div>
 
+
+<div class="container">
+	<p class="text">
+		<span>O</span><span>N</span><span>E</span> <span>N</span><span>O</span><span>T</span><span>E</span><span>S</span>
+	</p>
+</div>
+<p>
+    <span class="loader"></span>
+</p>
+
+*/
